frontend/test/should_fail/computations_decl_use_calls_arguments_mismatch_001.grg
function func(var b:boolean) : boolean
{
	return(b);
}

procedure call()
{
	def var b:boolean;
	b = func();
	return;
}

